# smart-money-concepts

./: .env.template  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yaml  unittest.yaml
app/: __init__.py  config.py  db.py  engine.py  events.py  feed.py  indicators.py  risk.py  runner.py  strategy.py
app/brokers/: __init__.py  base.py  paper.py
deploy/: nginx.conf  smc-api.service  smc-frontend.service
docs/: api.md  strategies.md
docs/obsidian/: API Key Encryption (AES).md  BOS and CHoCH.md  Binance Exchange.md  Bybit Exchange.md  CCXT Unified API.md  Candle Chart with SMC Indicators.md  Dashboard Architecture.md  Data Engine (CCXT).md  DataFrame.md  FVG - Fair Value Gap.md  FastAPI Backend.md  GraphifyPlugin().md  ICT Breaker Block Strategy.md  ICT Kill Zone Momentum Strategy.md  ICT Silver Bullet Strategy.md  ICT Strategy Templates.md  ICT Strategy Validation Tests.md  Indicator Service.md  Input Validator Decorator.md  Liquidity Detection.md  Live Trading Engine.md  Next.js Frontend.md  Nginx Reverse Proxy + HTTPS.md  Order Blocks.md  Paper Trading Engine.md  Phase 0 Data Pipeline and DB.md  Phase 1 Indicator Engine and API.md  Phase 2 Frontend and Charts.md  Phase 3 Strategy System and Backtester.md  Phase 4 Paper Trading Engine.md  Phase 5 Execution Engine.md  Phase 6 Nginx and Deployment.md  Previous High and Low.md  Proxmox LXC Container.md  Retracements.md  Risk Manager.md  SMC Indicators Library (smc.py).md  SQLite Database (Repository Pattern).md  Series.md  (+49 more)
frontend/: README.md  package-lock.json  package.json  vitest.config.mts
strategies/: __init__.py  example_smc.py
tests/: test_db.py
(+92 files in other folders)
